# tg-note

./: .dockerignore  .env.example  .gitignore  .mcp.json  Dockerfile  Dockerfile.joplin  FR-012-IMPLEMENTATION-SUMMARY.md  FR-016-IMPLEMENTATION-SUMMARY.md  README.md  RELEASE_NOTES.md  activate.sh  config.py  database_schema.sql  demo_sprint4.sh  deploy.sh  docker-compose.yml  entrypoint.sh  fly.joplin.toml  fly.toml  folder_discovery.py  gtd-15min-quick-capture-prompt (1).md  joplin-entrypoint.sh  joplin_config.json  main.py  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml  setup.sh  setup_env.py  start.sh  test_sprint5_integration.py  web-questionnaire.html  自动同步WebDAV.md
.cursor/: mcp.json
docs/: 03-resources-folder-suggestions.md  BRAIN_DUMP_INDEX.md  LLM_GUIDE.md  README.md  TEST_SUMMARY_SPRINT5.md  api-reference.md  brain-dump-flow-diagrams.md  brain-dump-implementation-guide.md  brain-dump-prompt-tuning.md  brain-dump-quick-reference.md  database_schema.sql  (+8 more)
mcp-project-management/: PLAN.md  README.md  pyproject.toml
mcp-project-management/scripts/: backlog-metrics.sh  check-links.sh  generate-release-notes-draft.sh  validate-backlog-integrity.sh  validate-backlog.sh  validate-mermaid.sh  visualize-dependencies.sh
mcp-project-management/src/mcp_project_management/: __init__.py  bootstrap.py  prompts.py  resources.py  server.py  tools.py
mcp-tasks-joplin/: README.md  config.json.example  pyproject.toml
mcp-tasks-joplin/src/mcp_tasks_joplin/: __init__.py  config.py  joplin_client.py  semantic_search.py  server.py  tasks_client.py  tools.py
(+369 files in other folders)
