[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-project-management"
version = "0.1.0"
description = "MCP server exposing project-management philosophy and processes to AI clients"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.0.0",
]

[project.scripts]
mcp-project-management = "mcp_project_management.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_project_management"]

[tool.hatch.build.targets.sdist]
include = ["src/mcp_project_management"]
