[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-tasks-joplin"
version = "0.1.0"
description = "MCP server for querying and mutating Google Tasks and Joplin notes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.0.0",
    "httpx>=0.24.0",
    "requests-oauthlib>=1.3.0",
]

[project.scripts]
mcp-tasks-joplin = "mcp_tasks_joplin.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_tasks_joplin"]

[tool.hatch.build.targets.sdist]
include = ["src/mcp_tasks_joplin"]
